{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 221,
  "lineage": "12fd95ea-1c97-4da7-682f-539bca2db014",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "cocus_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:204023917606:route-table/rtb-01f4eb96a1d1a54f0",
            "default_route_table_id": "rtb-01f4eb96a1d1a54f0",
            "id": "rtb-01f4eb96a1d1a54f0",
            "owner_id": "204023917606",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0b8de6cf57a9fe425",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-0de64921941b46991"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.cocus-eip",
            "aws_nat_gateway.cocus-ng",
            "aws_subnet.cocus-public-subnet",
            "aws_vpc.cocus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "cocus-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-03c06eb6afe14878f",
            "domain": "vpc",
            "id": "eipalloc-051e3d1e0dce7f4fe",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0417b84406b147bec",
            "private_dns": "ip-172-16-1-114.us-east-2.compute.internal",
            "private_ip": "172.16.1.114",
            "public_dns": "ec2-3-132-172-241.us-east-2.compute.amazonaws.com",
            "public_ip": "3.132.172.241",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cocus-eip"
            },
            "tags_all": {
              "Name": "cocus-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-023c8dbf8268fb3ca",
            "arn": "arn:aws:ec2:us-east-2:204023917606:instance/i-04b56a38688645f20",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04b56a38688645f20",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cocus",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cf704db43a4fe375",
            "private_dns": "ip-172-16-1-53.us-east-2.compute.internal",
            "private_ip": "172.16.1.53",
            "public_dns": "ec2-18-119-104-49.us-east-2.compute.amazonaws.com",
            "public_ip": "18.119.104.49",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f56ad3213933af1d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-061a79ee1d81fb594",
            "tags": {
              "Name": "cocus-webserver"
            },
            "tags_all": {
              "Name": "cocus-webserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0221671cfc91d4811"
            ]
          },
          "dependencies": [
            "aws_instance.db",
            "aws_security_group.private",
            "aws_security_group.public",
            "aws_subnet.cocus-private-subnet",
            "aws_subnet.cocus-public-subnet",
            "data.template_file.apache",
            "data.template_file.mysql"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-023c8dbf8268fb3ca",
            "arn": "arn:aws:ec2:us-east-2:204023917606:instance/i-0f42d2653272ed79f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f42d2653272ed79f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cocus",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09a6576460961481c",
            "private_dns": "ip-172-16-2-235.us-east-2.compute.internal",
            "private_ip": "172.16.2.235",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02db6a0272dd7ab6b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09d11fa51625b2cb5",
            "tags": {
              "Name": "cocus-database"
            },
            "tags_all": {
              "Name": "cocus-database"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a183262bc070df47"
            ]
          },
          "dependencies": [
            "aws_security_group.private",
            "aws_subnet.cocus-private-subnet",
            "data.template_file.mysql"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cocus-ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:204023917606:internet-gateway/igw-0d83a4bb4a5e8d30d",
            "id": "igw-0d83a4bb4a5e8d30d",
            "owner_id": "204023917606",
            "tags": {
              "Name": "cocus-ig"
            },
            "tags_all": {
              "Name": "cocus-ig"
            },
            "vpc_id": "vpc-0de64921941b46991"
          },
          "dependencies": [
            "aws_vpc.cocus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "cocus-ng",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-051e3d1e0dce7f4fe",
            "connectivity_type": "public",
            "id": "nat-0b8de6cf57a9fe425",
            "network_interface_id": "eni-0417b84406b147bec",
            "private_ip": "172.16.1.114",
            "public_ip": "3.132.172.241",
            "subnet_id": "subnet-061a79ee1d81fb594",
            "tags": {
              "Name": "cocus-nat_gateway"
            },
            "tags_all": {
              "Name": "cocus-nat_gateway"
            }
          },
          "dependencies": [
            "aws_eip.cocus-eip",
            "aws_subnet.cocus-public-subnet",
            "aws_vpc.cocus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "awslab-rt-internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:204023917606:route-table/rtb-07805996d9f5d16e4",
            "id": "rtb-07805996d9f5d16e4",
            "owner_id": "204023917606",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d83a4bb4a5e8d30d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "awslab-rt-internet"
            },
            "tags_all": {
              "Name": "awslab-rt-internet"
            },
            "vpc_id": "vpc-0de64921941b46991"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.cocus-ig",
            "aws_vpc.cocus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cocus-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eed1fe616e5f63b4",
            "route_table_id": "rtb-07805996d9f5d16e4",
            "subnet_id": "subnet-061a79ee1d81fb594"
          },
          "dependencies": [
            "aws_internet_gateway.cocus-ig",
            "aws_route_table.awslab-rt-internet",
            "aws_subnet.cocus-public-subnet",
            "aws_vpc.cocus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:204023917606:security-group/sg-0a183262bc070df47",
            "description": "Security-Group-Private-Ports",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a183262bc070df47",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ICMP",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "172.16.1.0/24"
                ],
                "description": "DB Port",
                "from_port": 3110,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3110
              },
              {
                "cidr_blocks": [
                  "172.16.1.0/24"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "internal communication",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "Security-Group-Private-Ports",
            "name_prefix": "",
            "owner_id": "204023917606",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cocus-private-sg"
            },
            "tags_all": {
              "Name": "cocus-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de64921941b46991"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cocus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:204023917606:security-group/sg-0221671cfc91d4811",
            "description": "Security Group Public Ports",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0221671cfc91d4811",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ICMP",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "internal communication",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "Security-Group-Public-Ports",
            "name_prefix": "",
            "owner_id": "204023917606",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cocus-public-sg"
            },
            "tags_all": {
              "Name": "cocus-public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de64921941b46991"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cocus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cocus-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:204023917606:subnet/subnet-09d11fa51625b2cb5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.16.2.0/24",
            "id": "subnet-09d11fa51625b2cb5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "204023917606",
            "tags": {
              "Name": "awslab-subnet-private"
            },
            "tags_all": {
              "Name": "awslab-subnet-private"
            },
            "vpc_id": "vpc-0de64921941b46991"
          },
          "dependencies": [
            "aws_vpc.cocus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cocus-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:204023917606:subnet/subnet-061a79ee1d81fb594",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.16.1.0/24",
            "id": "subnet-061a79ee1d81fb594",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "204023917606",
            "tags": {
              "Name": "awslab-subnet-public"
            },
            "tags_all": {
              "Name": "awslab-subnet-public"
            },
            "vpc_id": "vpc-0de64921941b46991"
          },
          "dependencies": [
            "aws_vpc.cocus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cocus-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:204023917606:vpc/vpc-0de64921941b46991",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0bf1f9145a402d058",
            "default_route_table_id": "rtb-01f4eb96a1d1a54f0",
            "default_security_group_id": "sg-004830a1f2a4fc3a1",
            "dhcp_options_id": "dopt-f46ac99f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0de64921941b46991",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01f4eb96a1d1a54f0",
            "owner_id": "204023917606",
            "tags": {
              "Name": "awslab-vpc"
            },
            "tags_all": {
              "Name": "awslab-vpc"
            }
          }
        }
      ]
    }
  ]
}